--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_splash">SplashActivity</string>
     <string name="title_activity_guide">GuideActivity</string>
     <string name="title_activity_test_ok_http">TestOkHttpActivity</string>
+    <string name="title_activity_news_detail">NewsDetailActivity</string>
 </resources>
